<resources>
    <string name="app_name">Todo</string>
    <string name="title_activity_todo_list">TodoList</string>
    <string name="success">Success</string>
    <string name="todo_added_successfully">Todo Added Successfully</string>
    <string name="ok">OK</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="todo_update_successfully">ToDo Update Successfully</string>
    <string name="channel_name">Todo App</string>
    <string name="channel_description">Shows Notifications For Your Daily Todo</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
</resources>
